# GeminiCLI

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.backup  ARCHITECTURE.md  AgentSwarm.psm1  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DUPLICATE_ANALYSIS_REPORT.md  Debug-Swarm.ps1  Dockerfile  GEMINI.md  GeminiHydra.bat  Generate-MCP-Config.ps1  IMPROVEMENTS_50.md  Invoke-GeminiWithFallback.ps1  README.md  READY.md  Start-StatusMonitor.ps1  Test-Prompts.ps1  [nazwa_pliku_lub_sciezka_wzgledna]  _launcher.ps1  biome.json  bridge.json  bridge.ps1  claude-code.bat  claude-code.ps1  claude-wt.bat  docker-compose.yml  fib.py  gemini-hydra.omp.json  gemini-mcp-config.json  gemini-wt.bat  gemini-wt.ps1  gemini.bat  gemini.ps1  launch-gui.bat  (+30 more)
.claude/: settings.json  settings.local.json  statusline.cjs
.gemini/: settings.json  statusline.cjs
GeminiGUI/: .npmrc  KEYBOARD_SHORTCUTS_EXAMPLES.tsx  build-fast.bat  clean-start.ps1  clear-storage.html  launch.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test_results.txt  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  wdio.conf.ts
GeminiGUI/src-tauri/: Cargo.toml  tauri.conf.json
GeminiGUI/src-tauri/.cargo/: config.toml
GeminiGUI/src-tauri/capabilities/: default.json
GeminiGUI/src-tauri/src/: gemini_api.rs  lib.rs  llama_backend.rs  model_downloader.rs  model_manager.rs  system_commands.rs
ai-handler/: AIFacade.psm1  AIModelHandler.psm1  Demo-AdvancedAI.ps1  Initialize-AIHandler.ps1  Initialize-AdvancedAI.ps1  README.md  (+26 more)
(+921 files in other folders)
